# PortfolioOptimizer

./: .gitignore  EXPERIMENT_GUIDE.md  README.md  STRATEGY_OPTIMIZATION_REPORT.md  analyze_results.py  build.sh  debug_reproduction.py  debug_reproduction_threaded.py  experiment_results_with_charts_20260202_142236.csv  run_experiments_with_charts.py  run_strategy_experiments.py  test_strategy_quick.py
.trae/documents/: Add Tests for Frontend and Backend.md  Integrate Tests into Build Process.md  Strategy Optimizer Implementation Plan.md  strategy-optimizer-prd.md  strategy-optimizer-technical-architecture.md
.trae/prompts/: initial_requirement.md
backend/: check_backend.py  pyproject.toml  requirements.txt  strategies.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: backtest.py  monte_carlo.py  option_pricing.py  simulator.py
backend/notebooks/: dashboard.py
backend/tests/: test_backtest.py  test_benchmark_withdrawal.py  test_monte_carlo.py  test_option_pricing.py  test_simulator.py
experiments/: Optimal Strategy.md  Strategy Optimization.md  Strategy Optimization_Enhanced.md  analyze_results.py  debug_reproduction.py  debug_reproduction_threaded.py  experiment_results_with_charts_20260202_143858.csv  experiment_results_with_charts_20260202_201526.csv  run_experiments_with_charts.py  run_strategy_experiments.py  test_strategy_quick.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  (+5 more)
(+1 files in other folders)
